# multi-agent-rl-thesis

./: .flake8  README.md  boi.py  pyproject.toml
Multi_Agent_Actor_Critic/: README.md  networks.py  plot.py  plot_compare.py  run.py  run_seed.py  run_test.py
Multi_Agent_Complex_Actor_Critic/: README.md  environment.py  learning_functions.py  networks.py  plot.py  plot_compare.py  retrieve_pfiles.py  run.py  run_seed.py  run_test.py  send_files.py
Multi_Agent_Complex_REINFORCE/: README.md  environment.py  learning_function.py  learning_functions.py  networks.py  plot.py  run.py  run_seed.py  run_test.py
Multi_Agent_U_Function_Coach/: README.md  environment.py  networks.py  plot.py  plot_compare.py  run_seed.py  run_sequential.py  run_test.py
Muti_Agent_U_Function/: README.md  environment.py  networks.py  plot.py  run.py  run_seed.py  run_test.py
Single_Agent_Actor_Critic/: README.md  environment.py  learning_functions.py  plot.py  run.py
Single_Agent_Deep_REINFORCE/: README.md  agent.py  environment.py  learning_function.py  plot.py
Single_Agent_REINFORCE/: README.md  environment.py  learning_function.py  plot.py  simulate_model.py
src/: environment.py  main.py  plot.py  retrieve_pfiles.py  run_seed.py  run_sequential.py
src/experiment/: __init__.py  coordinator.py  run_experiment.py  simulator.py
src/models/: __init__.py  actor.py  critic.py  networks.py  state_normaliser.py
src/utils/: plot.py  retrieve_pfiles.py  send_files.py
