[tool.poetry]
name = "multi-agent-rl-thesis"
version = "0.1.0"
description = ""
authors = ["olliematthews <ojm1@btinternet.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8.0"
tensorflow = "<2.0"
keras = "2.3.1"

[tool.poetry.group.dev.dependencies]
black = "^24.3.0"
isort = "^5.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

